# stateless-light-client

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
benchmark/: bankai_metrics.csv  benchmark.py  diagrams.py
cairo/src/: committee_update.cairo  recursive_update.cairo  recursive_update_stwo.cairo  types.cairo  verify_epoch.cairo  verify_stone.cairo
dashboard/: README.md  index.html  tailwind.config.ts  vite.config.ts
dashboard/src/components/: Dashboard.tsx  ProofTable.tsx  StatsCards.tsx
migrations/: 20250604132648_tables.sql  20250604133324_add_status_fields.sql
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib
scripts/: cairo_compile.sh  setup.sh
src/crates/api/: Cargo.toml
src/crates/api/src/: main.rs
src/crates/cairo_runner/: Cargo.toml
src/crates/cairo_runner/src/: hint_processor.rs  hints.rs  lib.rs  recursive_epoch.rs  types.rs
src/crates/cli/: Cargo.toml
src/crates/cli/src/: main.rs
src/crates/core/: Cargo.toml
src/crates/core/src/: lib.rs
src/crates/core/src/clients/: atlantic.rs  beacon_chain.rs  mod.rs
src/crates/core/src/conversion/: mod.rs
src/crates/core/src/db/: mod.rs
src/crates/core/src/fetcher/: execution_header_input.rs  mod.rs  recursive_epoch_input.rs  sync_committee_input.rs
src/crates/core/src/utils/: config.rs  constants.rs  merkle.rs
src/crates/decommit/: Cargo.toml  proof_bankai.json
src/crates/decommit/src/: error.rs  lib.rs  main.rs  retrieve.rs  transform.rs  trustless_header.rs
src/crates/shikai/: Cargo.toml
src/crates/shikai/src/: error.rs  lib.rs  main.rs  proof_output.rs
src/crates/shikai/src/fetch/: api.rs  beacon.rs  execution.rs  mod.rs
src/crates/shikai/src/stone/: mod.rs  transform.rs  verify.rs
src/crates/shikai/src/verified/: beacon_header.rs  execution_header.rs  mod.rs
src/crates/shikai/src/verified/beacon/: mod.rs
src/crates/shikai/src/verified/execution/: account.rs  mod.rs  tx.rs
src/crates/stone_verifier_hints/: Cargo.toml
src/crates/stone_verifier_hints/src/: lib.rs  types.rs  vars.rs  verifier_hints.rs  verifier_utils.rs
