[workspace]
members = [
    "src/crates/cairo_runner",
    "src/crates/stone_verifier_hints",
    "src/crates/core",
    "src/crates/cli",
    "src/crates/shikai",
    "src/crates/api"
]
exclude = ["tests"]
resolver = "2"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# Cairo VM and Blockchain
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", tag = "v2.1.0", features = ["extensive_hints", "clap", "cairo-1-hints", "mod_builtin"] }
beacon_types = { git = "https://github.com/petscheit/lighthouse.git", package = "types", rev = "2ef065a16"}
beacon-state-proof = { git = "https://github.com/petscheit/beacon-state-proof", rev = "9dddb71f2b037d68097bf50c0a7b02229bf4c3e2" }

# Numeric
num-bigint = "0.4.1"
num-traits = "0.2.19"

# Utils
hex = "0.4.3"
bincode = "2.0.1"

# Error Handling & Logging
thiserror = "2.0.9"
tracing = "0.1.41"

# Local Deps
garaga_zero_hints = { path = "cairo/packages/garaga-zero/hints/rust-vm" }
stone-verifier-hints = { path = "src/crates/stone_verifier_hints" }
cairo-runner = { path = "src/crates/cairo_runner" }
bankai-core = { path = "src/crates/core" }
cli = { path = "src/crates/cli" }
decommit = { path = "src/crates/decommit" }

alloy-primitives = "0.8.13"
alloy-rpc-types-beacon = "0.12.6"
alloy-rpc-types = "0.12.6"
alloy-provider = "0.12.6"
alloy-network = "0.12.6"
alloy-consensus = "0.12.6"
starknet-core = "0.14.0"
url = "2.5.2"

tree_hash = "0.8"
tree_hash_derive = "0.8"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }

tokio = { version = "1.0", features = ["full"] }
bls12_381 = "0.8.0"
starknet = "0.12.0"
starknet-crypto = "0.7.3"
sha2 = "0.10.8"
futures = "0.3"
tokio-util = "0.7.13"
dotenv = "0.15"
clap = { version = "4.5.22", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
sqlx = { version = "0.7.0-alpha.1", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4"] }

swiftness_air = { git = "https://github.com/iosis-tech/swiftness", default-features = false, version = "1.0.0", features = ["dynamic", "stone6"] }
swiftness_commitment = { git = "https://github.com/iosis-tech/swiftness", default-features = false, version = "1.0.0", features = ["blake2s_248_lsb"] }
swiftness_fri = { git = "https://github.com/iosis-tech/swiftness", default-features = false, version = "1.0.0" }
swiftness_pow = { git = "https://github.com/iosis-tech/swiftness", default-features = false, version = "1.0.0", features = ["blake2s"] }
swiftness_stark = { git = "https://github.com/iosis-tech/swiftness", default-features = false, version = "1.0.0", features = ["dynamic"] }
swiftness_transcript = { git = "https://github.com/iosis-tech/swiftness", default-features = false, version = "1.0.0" }
swiftness_proof_parser = { git = "https://github.com/iosis-tech/swiftness", version = "1.0.0" }