[package]
name = "bankai-api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
hex.workspace = true
beacon_types.workspace = true
tracing.workspace = true
bincode.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
itertools.workspace = true
reqwest.workspace = true
beacon-state-proof.workspace = true
cairo-vm.workspace = true
tokio.workspace = true
bls12_381.workspace = true
starknet.workspace = true
starknet-crypto.workspace = true
sha2.workspace = true
futures.workspace = true
tokio-util.workspace = true
dotenv.workspace = true
sqlx.workspace = true
uuid.workspace = true
cairo-runner.workspace = true
bankai-core = { path = "../core" }
warp = "0.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }