[package]
name = "shikai"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv.workspace = true
bankai-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
swiftness_air.workspace = true 
swiftness_commitment.workspace = true 
swiftness_fri.workspace = true 
swiftness_pow.workspace = true 
swiftness_stark.workspace = true 
swiftness_transcript.workspace = true 
swiftness_proof_parser.workspace = true 
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-consensus.workspace = true
starknet-core.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
url.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true