[package]
name = "stone-verifier-hints"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
hex.workspace = true
beacon_types.workspace = true
tracing.workspace = true
bincode.workspace = true
num-traits.workspace = true
regex = "1.11.1"
starknet-types-core = "0.1.2"
